--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -813,6 +813,7 @@
       "instants": {
         "prioritize": "Впорядковувати повідомлення відповідно до їхньої важливості"
       },
+      "instants_prioritize": "Впорядковувати повідомлення відповідно до їхньої важливості",
       "instants_viewed_lifetime": "Стирати переглянуті повідомлення через",
       "media_max-size": "Максимальний розмір відправленних медіафайлів",
       "media_preview-gain": "Фактор ефективності попереднього перегляду медіа",
@@ -839,9 +840,23 @@
       "push_client_max-number": "Максимальна кількість клієнтів, які отримують пуш-повідомлення",
       "push_notification_lifetime": "Видаляти неотримані пуш-повідомлення через",
       "reaction_deleted_lifetime": "Стирати видалені реакції через",
+      "recommendations_frequency": "Кількість рекомендацій",
+      "recommendations_frequency-items": {
+        "less": "Менше",
+        "more": "Більше",
+        "much-less": "Набагато менше",
+        "much-more": "Набагато більше",
+        "none": "Вимкнені",
+        "normal": "Помірна"
+      },
+      "recommendations_safe": "Безпечні рекомендації",
+      "recommendations_sheriff": "Шериф, який перевіряє рекомендації на безпечність",
+      "recommendations_source": "Сервіс рекомендацій що використовується",
       "remote-comment-verification_lifetime": "Зберігати результати верифікації коментаря протягом",
       "remote-posting-verification_lifetime": "Зберігати результати верифікації поста протягом",
       "remote-reaction-verification_lifetime": "Зберігати результати верифікації реакції протягом",
+      "search_known": "Відомі пошукові системи, яким автоматично дозволено отримувати сповіщення",
+      "search_max-unknown": "Максимальна кількість невідомих пошукових систем, які можуть отримувати сповіщення",
       "subscribers_view": "Список підписників видно",
       "subscribers_view-total": "Кількість підписників видно",
       "subscription_auto_forced": "Не дозволяти відписуватись від автоматичної підписки",
