--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -586,6 +586,7 @@
   "read-more": "Читать дальше...",
   "reason": "Причина",
   "received-mail": "Уже получил письмо",
+  "recommended-post": "Рекомендация",
   "recommend-set-email": "<0>Рекомендуем указать адрес электронной почты.</0> Он может пригодиться, например, для восстановления пароля. Не беспокойтесь, никто посторонний его не увидит.",
   "redirecting": "Перенаправляю...",
   "redo": "Повторить",
