--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -586,6 +586,7 @@
   "read-more": "Читати далі...",
   "reason": "Причина",
   "received-mail": "Вже отримав листа",
+  "recommended-post": "Рекомендація",
   "recommend-set-email": "<0>Рекомендуємо вказати адресу електронної пошти.</0> Вона може знадобитися, наприклад, для відновлення пароля. Не хвилюйтеся, ніхто сторонній її не побачить.",
   "redirecting": "Перенаправляю...",
   "redo": "Повторити",
