Tune recommendations from the posting's menu.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -153,6 +153,7 @@
   "delete": "Delete",
   "delete-account-moera": "Delete my account in Moera",
   "delete-account-need-log-in": "To delete your account, you need to",
+  "delete-all-his-recommended": "Delete all recommended posts by {gender, select, male {him} female {her} other {them}}",
   "delete-avatar": "Delete the avatar?",
   "delete-blog": "Delete my blog",
   "delete-comment": "Do you really want to delete the comment \"{heading}\"?",
@@ -185,6 +186,8 @@
   "donations-android-prohibited": "Donations feature is prohibited in Android apps downloaded from Google Play according to <0>Google Play Payments Policy</0>.<1/><2/>Please use Moera web client for this.",
   "dont-ask-again": "Don't ask again",
   "dont-ask-next-time": "Don't ask next time",
+  "dont-recommend": "Do not recommend",
+  "dont-recommend-user": "Do not recommend posts by <b>{name}</b> anymore?",
   "do-want-allow-android-google-play": "<0>Do you want your blog to be accessible with Moera for Android app installed from Google Play?</0> To do this, you must allow the sheriff to read the contents of your blog and decide (in accordance with Google Play rules) which posts or comments should be hidden in Moera for Android.",
   "download": "Download",
   "downloading-image": "Downloading image...",
@@ -586,6 +589,7 @@
   "read-more": "Read more...",
   "reason": "Reason",
   "received-mail": "Received the mail already",
+  "recommendation-settings-updated": "Recommendation settings updated",
   "recommended-post": "Recommended",
   "recommend-set-email": "<0>We recommend providing an email address.</0> It may come in handy, for example, for password recovery. Don't worry, no one else will see it.",
   "redirecting": "Redirecting...",
@@ -971,6 +975,7 @@
   "transfer-existing-name-button": "Transfer an Existing Name",
   "transfer-node-name": "Transfer Name From Another Node",
   "try-refine-search": "Try to refine your search terms or adjust filters",
+  "tune-recommendations": "Tune recommendations",
   "turn-off": "Turn off",
   "type-content": "Type of content",
   "unblock": "Unblock",
