--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -153,6 +153,7 @@
   "delete": "Usuń",
   "delete-account-moera": "Usuń moje konto w Moera",
   "delete-account-need-log-in": "Aby usunąć swoje konto, musisz się",
+  "delete-all-his-recommended": "Usuń wszystkie polecane posty przez {gender, select, female {nią} other {niego}}",
   "delete-avatar": "Usunąć awatar?",
   "delete-blog": "Usuń mój blog",
   "delete-comment": "Czy na pewno chcesz usunąć komentarz \"{heading}\"?",
@@ -185,6 +186,8 @@
   "donations-android-prohibited": "Funkcja dotacji jest zabroniona w aplikacjach Android pobranych z Google Play zgodnie z <0>Polityką Płatności Google Play</0>.<1/><2/>Proszę użyć klienta Moera web do tego celu.",
   "dont-ask-again": "Nie pytaj ponownie",
   "dont-ask-next-time": "Nie pytaj następnym razem",
+  "dont-recommend": "Nie polecaj",
+  "dont-recommend-user": "Nie polecaj już postów <b>{name}</b>?",
   "do-want-allow-android-google-play": "<0>Czy chcesz, aby Twój blog był dostępny dzięki aplikacji Moera na Androida zainstalowanej z Google Play?</0> Aby to zrobić, musisz pozwolić szeryfowi na odczytanie zawartości twojego bloga i decydowanie (zgodnie z zasadami Google Play), które posty lub komentarze powinny być ukryte w Moera dla Androida.",
   "download": "Pobierz",
   "downloading-image": "Pobieranie obrazu...",
@@ -586,6 +589,7 @@
   "read-more": "Czytaj więcej...",
   "reason": "Powód",
   "received-mail": "Otrzymano już maila",
+  "recommendation-settings-updated": "Ustawienia rekomendacji zaktualizowane",
   "recommended-post": "Rekomendacja",
   "recommend-set-email": "<0>Zalecamy podanie adresu e-mail.</0> Może się przydać, na przykład, do odzyskania hasła. Nie martw się, nikt inny go nie zobaczy.",
   "redirecting": "Przekierowanie...",
@@ -971,6 +975,7 @@
   "transfer-existing-name-button": "Przenieś istniejącą nazwę",
   "transfer-node-name": "Przenieś nazwę z innego węzła",
   "try-refine-search": "Spróbuj zawęzić wyszukiwane hasła lub dostosować filtry",
+  "tune-recommendations": "Dostosuj rekomendacje",
   "turn-off": "Wyłącz",
   "type-content": "Typ treści",
   "unblock": "Odblokuj",
