--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -153,6 +153,7 @@
   "delete": "Удалить",
   "delete-account-moera": "Удалить мой аккаунт в Moera",
   "delete-account-need-log-in": "Чтобы удалить свой аккаунт, вы должны в него",
+  "delete-all-his-recommended": "Удалить все {gender, select, female {её} other {его}} рекомендованные посты",
   "delete-avatar": "Удалить аватарку?",
   "delete-blog": "Удалить мой блог",
   "delete-comment": "Вы действительно хотите удалить комментарий \"{heading}\"?",
@@ -185,6 +186,8 @@
   "donations-android-prohibited": "Функция донатов запрещена в приложениях для Android, загруженных из Google Play, в соответствии с <0>Политикой платежей Google Play</0>.<1/><2/> Пожалуйста, используйте веб-клиент Moera для этого.",
   "dont-ask-again": "Больше не спрашивать",
   "dont-ask-next-time": "Не спрашивать следующий раз",
+  "dont-recommend": "Не рекомендовать",
+  "dont-recommend-user": "Не рекомендовать больше посты <b>{name}</b>?",
   "do-want-allow-android-google-play": "<0>Вы хотите, чтобы ваш блог был виден в приложении Moera для Android, установленном из Google Play?</0> Для этого вы должны разрешить шерифу читать содержимое вашего блога и решать (в соответствии с правилами Google Play), какие посты или комментарии следует скрыть в Moera для Android.",
   "download": "Скачать",
   "downloading-image": "Скачивание картинки...",
@@ -586,6 +589,7 @@
   "read-more": "Читать дальше...",
   "reason": "Причина",
   "received-mail": "Уже получил письмо",
+  "recommendation-settings-updated": "Настройки рекомендаций обновлены",
   "recommended-post": "Рекомендация",
   "recommend-set-email": "<0>Рекомендуем указать адрес электронной почты.</0> Он может пригодиться, например, для восстановления пароля. Не беспокойтесь, никто посторонний его не увидит.",
   "redirecting": "Перенаправляю...",
@@ -971,6 +975,7 @@
   "transfer-existing-name-button": "Переместить существующее имя",
   "transfer-node-name": "Переместить имя с другого узла",
   "try-refine-search": "Попробуйте уточнить поисковый запрос или настроить фильтры",
+  "tune-recommendations": "Настроить рекомендации",
   "turn-off": "Выключить",
   "type-content": "Тип контента",
   "unblock": "Разблокировать",
