--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -153,6 +153,7 @@
   "delete": "Видалити",
   "delete-account-moera": "Видалити мій аккаунт у Moera",
   "delete-account-need-log-in": "Щоб видалити свій аккаунт, вам потрібно до нього",
+  "delete-all-his-recommended": "Видалити всі {gender, select, female {її} other {його}} рекомендовані пости",
   "delete-avatar": "Видалити аватар?",
   "delete-blog": "Видалити мій блог",
   "delete-comment": "Ви дійсно бажаєте видалити коментар \"{heading}\"?",
@@ -185,6 +186,8 @@
   "donations-android-prohibited": "Функція донатів заборонена в додатках для Android, завантажених з Google Play, відповідно до <0>Політики платежів Google Play</0>.<1/><2/> Будь ласка, використовуйте веб-клієнт Moera для цього.",
   "dont-ask-again": "Більше не питати",
   "dont-ask-next-time": "Не питати наступного разу",
+  "dont-recommend": "Не рекомендувати",
+  "dont-recommend-user": "Не рекомендувати більше пости <b>{name}</b>?",
   "do-want-allow-android-google-play": "<0>Ви бажаєте, щоб ваш блог було видно у додатку Moera для Android, встановленому із Google Play?</0> Для цього ви повинні дозволити шерифу читати вміст вашого блогу та вирішувати (згідно з правилами Google Play), які пости чи коментарі слід приховати в Moera для Android.",
   "download": "Завантажити",
   "downloading-image": "Завантаження картинки...",
@@ -586,6 +589,7 @@
   "read-more": "Читати далі...",
   "reason": "Причина",
   "received-mail": "Вже отримав листа",
+  "recommendation-settings-updated": "Налаштування рекомендацій оновлено",
   "recommended-post": "Рекомендація",
   "recommend-set-email": "<0>Рекомендуємо вказати адресу електронної пошти.</0> Вона може знадобитися, наприклад, для відновлення пароля. Не хвилюйтеся, ніхто сторонній її не побачить.",
   "redirecting": "Перенаправляю...",
@@ -971,6 +975,7 @@
   "transfer-existing-name-button": "Перемістити існуюче ім'я",
   "transfer-node-name": "Перемістити ім'я з іншого вузла",
   "try-refine-search": "Спробуйте уточнити пошуковий запит або налаштувати фільтри",
+  "tune-recommendations": "Налаштувати рекомендації",
   "turn-off": "Вимкнути",
   "type-content": "Тип контенту",
   "unblock": "Розблокувати",
