New node settings.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -684,6 +684,7 @@
       "media": "Media",
       "password": "Password",
       "reactions": "Reactions",
+      "recommendations": "Recommendations",
       "replies": "Replies",
       "subscribers-and-subscriptions": "Subscribers, Subscriptions and Friends",
       "subscription-friend-requests": "Subscription and Friend Requests",
@@ -836,7 +837,8 @@
       "posting_non-admin_allowed": "Allow any user to add posts (experimental)",
       "posting_picked_hide-on-delete": "Do not delete Newsfeed posts when original is deleted",
       "posting_picked_revision_lifetime": "Purge old picked post revisions after",
-      "posting_revealed_notification_age": "Notify subscribers about opening a closed post, if it is newer than",
+      "posting_published_notification_age": "Notify subscribers about publishing a post if its publication date is in the last",
+      "posting_revealed_notification_age": "Notify subscribers about opening a closed post if it is newer than",
       "posting_revision_lifetime": "Purge old post revisions after",
       "posting_subject_present": "Posts have titles",
       "posting_time_relative": "Show relative time in posts",
