--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -684,6 +684,7 @@
       "media": "Media",
       "password": "Hasło",
       "reactions": "Reakcje",
+      "recommendations": "Rekomendacje",
       "replies": "Odpowiedzi",
       "subscribers-and-subscriptions": "Subskrybenci, subskrypcje i znajomi",
       "subscription-friend-requests": "Prośby o subskrypcję i znajomość",
@@ -836,6 +837,7 @@
       "posting_non-admin_allowed": "Zezwól na dodawanie postów przez dowolnego użytkownika (eksperymentalne)",
       "posting_picked_hide-on-delete": "Nie usuwaj postów z \"Aktualności\", gdy oryginał zostanie usunięty",
       "posting_picked_revision_lifetime": "Usuń stare wersje wybranych postów po",
+      "posting_published_notification_age": "Powiadom subskrybentów o opublikowaniu posta, jeżeli data jego publikacji przypada na ostatnią",
       "posting_revealed_notification_age": "Powiadom subskrybentów o otwarciu zamkniętego posta, jeśli jest nowszy niż",
       "posting_revision_lifetime": "Usuń stare wersje postów po",
       "posting_subject_present": "Posty mają tytuły",
