--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -684,6 +684,7 @@
       "media": "Медиа",
       "password": "Пароль",
       "reactions": "Реакции",
+      "recommendations": "Рекомендации",
       "replies": "Ответы",
       "subscribers-and-subscriptions": "Подписчики, подписки и друзья",
       "subscription-friend-requests": "Запросы на подписку и дружбу",
@@ -836,6 +837,7 @@
       "posting_non-admin_allowed": "Разрешить любому пользователю добавлять посты (экспериментальное)",
       "posting_picked_hide-on-delete": "Не удалять посты из ленты новостей, когда удалён оригинал",
       "posting_picked_revision_lifetime": "Стирать старые версии скачанных постов через",
+      "posting_published_notification_age": "Уведомлять подписчиков о публикации поста, если дата его публикации приходится на последние",
       "posting_revealed_notification_age": "Уведомлять подписчиков об открытии закрытого поста, если он новее, чем",
       "posting_revision_lifetime": "Стирать старые версии постов через",
       "posting_subject_present": "У постов есть заголовки",
