--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -684,6 +684,7 @@
       "media": "Медіа",
       "password": "Пароль",
       "reactions": "Реакції",
+      "recommendations": "Рекомендації",
       "replies": "Відповіді",
       "subscribers-and-subscriptions": "Підписники, підписки та друзі",
       "subscription-friend-requests": "Запити на підписку і дружбу",
@@ -836,6 +837,7 @@
       "posting_non-admin_allowed": "Дозволити будь-якому користувачеві додавати пости (експериментальне)",
       "posting_picked_hide-on-delete": "Не видаляти пости зі стрічки новин, коли видалено оригінал",
       "posting_picked_revision_lifetime": "Стирати старі версії завантажених постів через",
+      "posting_published_notification_age": "Повідомляти підписників про публікацію поста, якщо дата його публікації припадає на останні",
       "posting_revealed_notification_age": "Повідомляти підписників про відкриття закритого поста, якщо він новіший, ніж",
       "posting_revision_lifetime": "Стирати старі версії постів через",
       "posting_subject_present": "Пости мають заголовки",
