Implements a  tDistanceToNow() utility that turns a Date into a concise, localized “time-ago” string.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -963,6 +963,28 @@
   "this-week": "This week",
   "this-year": "This year",
   "three-months-ago": "3 months ago",
+  "time": {
+    "ago": "ago",
+    "day": {
+      "short": "d"
+    },
+    "hour": {
+      "short": "hr"
+    },
+    "minute": {
+      "short": "min"
+    },
+    "month": {
+      "short": "mo"
+    },
+    "now": "now",
+    "week": {
+      "short": "wk"
+    },
+    "year": {
+      "short": "yr"
+    }
+  },
   "title": "Title",
   "today": "Today",
   "token-copied": "Token copied to the clipboard",
