Additional positive reaction "Horror". Removing unused reactions and reordering others.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -569,6 +569,7 @@
     "haha": "Ha-ha",
     "hmm": "Hmm",
     "hope": "Hope",
+    "horror": "Horror",
     "hostile": "Hostile",
     "hot": "Hot",
     "hug": "Hug",
