--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -569,6 +569,7 @@
     "haha": "Ha-ha",
     "hmm": "Hmm",
     "hope": "Mam nadzieję",
+    "horror": "Przerażenie",
     "hostile": "Wrogi",
     "hot": "Gorący",
     "hug": "Uścisk",
