--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -569,6 +569,7 @@
     "haha": "Ха-ха",
     "hmm": "Хмм",
     "hope": "Надеюсь",
+    "horror": "Кошмар",
     "hostile": "Ненавижу",
     "hot": "Огонь",
     "hug": "Обнимаю",
