--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -569,6 +569,7 @@
     "haha": "Ха-ха",
     "hmm": "Хмм",
     "hope": "Сподіваюсь",
+    "horror": "Жах",
     "hostile": "Ненавиджу",
     "hot": "Вогонь",
     "hug": "Обіймаю",
