API returns rejected reactions instead of accepted/preferred. Allow selecting any reaction from the list at any moment.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -391,6 +391,7 @@
   "last-post": "last",
   "last-three-months": "In the last 3 months",
   "last-used": "Last used:",
+  "less": "Less",
   "link": "Link",
   "link-copied": "Link copied to the clipboard",
   "links": "Links",
