--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -391,6 +391,7 @@
   "last-post": "ostatni",
   "last-three-months": "W ciągu ostatnich 3 miesięcy",
   "last-used": "Ostatnio używane:",
+  "less": "Mniej",
   "link": "Link",
   "link-copied": "Link skopiowany do schowka",
   "links": "Linki",
