--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -391,6 +391,7 @@
   "last-post": "последний",
   "last-three-months": "В последние 3 месяца",
   "last-used": "Последнее использование:",
+  "less": "Меньше",
   "link": "Ссылка",
   "link-copied": "Ссылка скопирована в буфер обмена",
   "links": "Ссылки",
