--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -391,6 +391,7 @@
   "last-post": "останній",
   "last-three-months": "У останні 3 місяці",
   "last-used": "Останнє використання:",
+  "less": "Менше",
   "link": "Посилання",
   "link-copied": "Посилання скопійоване до буфера обміну",
   "links": "Посилання",
