Simplified reaction list input control.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -74,6 +74,7 @@
   "clear-filters": "Clear filters",
   "clear-formatting": "Clear formatting",
   "clear-selection": "Clear selection",
+  "click-disable-enable": "Click to disable/enable",
   "client-settings-changed-conflict": "Client settings were changed by somebody.",
   "clipboard-contains-formatting": "The clipboard contains text with formatting. Do you want to paste the text with formatting tags?",
   "clock-differ": "<b>Warning:</b> Clock in your computer significantly differ from the real time. This may affect cryptographic algorithms and cause problems for Moera client. It is recommended to turn clock synchronization on in your operating system.",
@@ -143,6 +144,7 @@
   "create-token": "Create a Token",
   "current": "Current",
   "current-password": "Current password",
+  "custom": "Custom",
   "danger-request-delete-blog": "<1>Danger!</1> By submitting this form, you send a request to your Moera provider to <0>delete your blog completely with all the data, including all personal information</0>. All your data will be <0>lost without recovery</0>. Press this button only if you are absolutely sure!",
   "date": "Date",
   "decision": "Decision",
@@ -174,6 +176,7 @@
   "details-blocking": "Details of blocking",
   "details-blocking-by-name": "Details of blocking by {name}",
   "details-blocking-name": "Details of blocking {name}",
+  "disable-all": "Disable all",
   "disconnect": "Log Out",
   "disconnected-from-home": "You have been logged out.",
   "discussion-closed": "Discussion is closed",
@@ -224,6 +227,7 @@
   "email-not-set": "Unfortunately, E-mail address for blog <b>{location}</b> is not set, so automatic password reset is impossible. Please, contact your Moera provider or server owner to find alternative ways to reset the password.",
   "email-set": "E-mail address set",
   "emoji": "Emoji",
+  "enable-all": "Enable all",
   "enable-oppose-reactions": "Enable \"Oppose\" reactions",
   "enable-reactions": "Enable reactions",
   "enter-name": "Enter name...",
@@ -401,6 +405,7 @@
   "load-newer-posts": "Load newer posts",
   "load-older-posts": "Load older posts",
   "login-incorrect": "Blog name or password is incorrect",
+  "main": "Main",
   "male": "Male",
   "male-short": "m.",
   "many": "Many",
@@ -475,8 +480,6 @@
   "numbered-list": "Numbered list",
   "ok": "OK",
   "only-new": "Only new",
-  "only-selected-allowed": "Only selected are allowed",
-  "only-selected-allowed-star-preferred": "Only selected are allowed, marked by <0/> are preferred",
   "open": "Open",
   "open-link": "Open link",
   "operation-at": "at",
@@ -667,9 +670,7 @@
   "secret-code": "Secret code",
   "secret-words": "Secret Words",
   "select": "Select",
-  "select-all": "Select all",
   "selected-automatically": "Selected automatically",
-  "selected-preferred": "Selected are preferred",
   "send": "Send",
   "send-request-delete-blog": "You have sent a request to delete your blog with all the data",
   "set-as-default": "Set as default",
@@ -1021,7 +1022,6 @@
   "unknown-name": "Unknown name",
   "unpin": "Unpin",
   "unquote": "Unquote",
-  "unselect-all": "Unselect all",
   "unsigned": "Unsigned",
   "unsubscribe": "Unsubscribe",
   "update": "Update",
