--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -74,6 +74,7 @@
   "clear-filters": "Очистить фильтры",
   "clear-formatting": "Убрать форматирование",
   "clear-selection": "Отменить выбор",
+  "click-disable-enable": "Нажмите, чтобы отключить/включить",
   "client-settings-changed-conflict": "Настройки клиента были кем-то изменены.",
   "clipboard-contains-formatting": "Буфер обмена содержит текст с форматированием. Вставить текст с тегами форматирования?",
   "clock-differ": "<b>Предупреждение:</b> Часы на вашем компьютере существенно отличаются от реального времени. Это может повлиять на криптографические алгоритмы и создать проблемы для клиента Moera. Рекомендуется включить синхронизацию времени в вашей операционной системе.",
@@ -143,6 +144,7 @@
   "create-token": "Создать токен",
   "current": "Текущий",
   "current-password": "Текущий пароль",
+  "custom": "Нестандартные",
   "danger-request-delete-blog": "<1>Опасно!</1> Отправив эту форму, вы отправите своему провайдеру Moera запрос на <0>полное удаление вашего блога со всеми данными, включая всю личную информацию</0>. Все ваши данные будут <0>потеряны без возможности восстановления</0>. Нажимайте эту кнопку только если вы абсолютно уверены!",
   "date": "Дата",
   "decision": "Решение",
@@ -174,6 +176,7 @@
   "details-blocking": "Подробности блокировки",
   "details-blocking-by-name": "Подробности блокировки со стороны {name}",
   "details-blocking-name": "Подробности блокировки {name}",
+  "disable-all": "Отключить все",
   "disconnect": "Выйти",
   "disconnected-from-home": "Вы вышли из своего аккаунта.",
   "discussion-closed": "Обсуждение закрыто",
@@ -224,6 +227,7 @@
   "email-not-set": "К сожалению, адрес e-mail для блога <b>{location}</b> не был задан, поэтому автоматический сброс пароля невозможен. Пожалуйста, свяжитесь с вашим провайдером Moera или владельцем сервера, чтобы найти другие пути для сброса пароля.",
   "email-set": "Адрес электронной почты установлен",
   "emoji": "Эмодзи",
+  "enable-all": "Включить все",
   "enable-oppose-reactions": "Разрешить неодобрительные реакции",
   "enable-reactions": "Разрешить реакции",
   "enter-name": "Введите имя...",
@@ -401,6 +405,7 @@
   "load-newer-posts": "Загрузить новые посты",
   "load-older-posts": "Загрузить старые посты",
   "login-incorrect": "Неверное имя блога или пароль",
+  "main": "Основные",
   "male": "Мужской",
   "male-short": "м.",
   "many": "Много",
@@ -475,8 +480,6 @@
   "numbered-list": "Нумерованный список",
   "ok": "OK",
   "only-new": "Только новые",
-  "only-selected-allowed": "Разрешены только выбранные",
-  "only-selected-allowed-star-preferred": "Разрешены только выбранные, а отмеченные <0/> предпочтительны",
   "open": "Открыть",
   "open-link": "Открыть ссылку",
   "operation-at": "в",
@@ -667,9 +670,7 @@
   "secret-code": "Секретный код",
   "secret-words": "Секретные слова",
   "select": "Выбрать",
-  "select-all": "Выбрать все",
   "selected-automatically": "Выбирается автоматически",
-  "selected-preferred": "Выбранные предпочтительны",
   "send": "Отправить",
   "send-request-delete-blog": "Вы отправили запрос на удаление своего блога со всей информацией",
   "set-as-default": "Сделать значением по умолчанию",
@@ -1021,7 +1022,6 @@
   "unknown-name": "Неизвестное имя",
   "unpin": "Открепить",
   "unquote": "Убрать цитату",
-  "unselect-all": "Снять выбор",
   "unsigned": "Не подписано",
   "unsubscribe": "Отписаться",
   "update": "Изменить",
