--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -74,6 +74,7 @@
   "clear-filters": "Очистити фільтри",
   "clear-formatting": "Прибрати форматування",
   "clear-selection": "Відмінити вибір",
+  "click-disable-enable": "Натисніть для вимкнення/увімкнення",
   "client-settings-changed-conflict": "Налаштування клієнта були кимось змінені.",
   "clipboard-contains-formatting": "Буфер обміну містить текст із форматуванням. Вставити текст із тегами форматування?",
   "clock-differ": "<b>Попередження:</b> Годинник на вашому комп'ютері істотно відрізняється від реального часу. Це може вплинути на криптографічні алгоритми та створити проблеми для клієнта Moera. Бажано увімкнути синхронізацію часу у вашій операційній системі.",
@@ -143,6 +144,7 @@
   "create-token": "Створити токен",
   "current": "Поточний",
   "current-password": "Поточний пароль",
+  "custom": "Нестандартні",
   "danger-request-delete-blog": "<1>Небезпечно!</1> Надіславши цю форму, ви надсилаєте запит до вашого провайдера Moera на <0>повне видалення вашого блогу з усіма даними, включно з усією особистою інформацією</0>. Всі ваші дані будуть <0>втрачені без можливості відновлення</0>. Натискайте цю кнопку, тільки якщо ви абсолютно впевнені!",
   "date": "Дата",
   "decision": "Рішення",
@@ -174,6 +176,7 @@
   "details-blocking": "Подробиці блокування",
   "details-blocking-by-name": "Подробиці блокування з боку {name}",
   "details-blocking-name": "Подробиці блокування {name}",
+  "disable-all": "Вимкнути все",
   "disconnect": "Вийти",
   "disconnected-from-home": "Ви вийшли зі свого акаунта.",
   "discussion-closed": "Обговорення закрите",
@@ -224,6 +227,7 @@
   "email-not-set": "На жаль, адреса e-mail для блогу <b>{location}</b> не була задана, тому автоматичне скидання пароля неможливе. Будь ласка, зв'яжіться з вашим провайдером Moera або власником сервера, щоб знайти інші шляхи для скидання пароля.",
   "email-set": "Адресу електронної пошти встановлено",
   "emoji": "Емодзі",
+  "enable-all": "Увімкнути все",
   "enable-oppose-reactions": "Дозволити несхвальні реакції",
   "enable-reactions": "Дозволити реакції",
   "enter-name": "Введіть ім'я...",
@@ -401,6 +405,7 @@
   "load-newer-posts": "Завантажити нові пости",
   "load-older-posts": "Завантажити старі пости",
   "login-incorrect": "Неправильне ім'я блога або пароль",
+  "main": "Головні",
   "male": "Чоловічий",
   "male-short": "ч.",
   "many": "Багато",
@@ -475,8 +480,6 @@
   "numbered-list": "Нумерований список",
   "ok": "OK",
   "only-new": "Тільки нові",
-  "only-selected-allowed": "Дозволені лише обрані",
-  "only-selected-allowed-star-preferred": "Дозволені лише обрані, а зазначені <0/> мають перевагу",
   "open": "Відкрити",
   "open-link": "Відкрити посилання",
   "operation-at": "у",
@@ -667,9 +670,7 @@
   "secret-code": "Секретний код",
   "secret-words": "Секретні слова",
   "select": "Обрати",
-  "select-all": "Обрати все",
   "selected-automatically": "Обирається автоматично",
-  "selected-preferred": "Обрані мають перевагу",
   "send": "Надіслати",
   "send-request-delete-blog": "Ви надіслали запит на видалення свого блогу з усіма даними",
   "set-as-default": "Зробити значенням за замовчуванням",
@@ -1021,7 +1022,6 @@
   "unknown-name": "Невідоме ім'я",
   "unpin": "Відкріпити",
   "unquote": "Зняти цитату",
-  "unselect-all": "Зняти вибір",
   "unsigned": "Не підписано",
   "unsubscribe": "Відписатись",
   "update": "Змінити",
