--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -74,6 +74,7 @@
   "clear-filters": "Wyczyść filtry",
   "clear-formatting": "Wyczyść formatowanie",
   "clear-selection": "Wyczyść wybór",
+  "click-disable-enable": "Kliknij, aby wyłączyć/włączyć",
   "client-settings-changed-conflict": "Ustawienia klienta zostały zmienione przez kogoś innego.",
   "clipboard-contains-formatting": "Schowek zawiera tekst z formatowaniem. Czy chcesz wkleić tekst z tagami formatującymi?",
   "clock-differ": "<b>Ostrzeżenie:</b> Zegar w Twoim komputerze znacznie różni się od rzeczywistego czasu. Może to wpłynąć na algorytmy kryptograficzne i powodować problemy dla klienta Moera. Zaleca się włączenie synchronizacji zegara w systemie operacyjnym.",
@@ -143,6 +144,7 @@
   "create-token": "Utwórz token",
   "current": "Obecny",
   "current-password": "Obecne hasło",
+  "custom": "Niestandardowy",
   "danger-request-delete-blog": "<1>Niebezpieczeństwo!</1> Przesyłając ten formularz, wysyłasz prośbę do swojego dostawcy Moera o <0>całkowite usunięcie Twojego bloga wraz ze wszystkimi danymi, w tym wszystkimi danymi osobowymi</0>. Wszystkie dane zostaną <0>utracone bez możliwości ich odzyskania</0>. Naciśnij ten przycisk tylko wtedy, gdy masz absolutną pewność!",
   "date": "Data",
   "decision": "Decyzja",
@@ -174,6 +176,7 @@
   "details-blocking": "Szczegóły blokowania",
   "details-blocking-by-name": "Szczegóły blokowania przez {name}",
   "details-blocking-name": "Szczegóły blokowania {name}",
+  "disable-all": "Wyłącz wszystko",
   "disconnect": "Wyloguj",
   "disconnected-from-home": "Zostałeś wylogowany.",
   "discussion-closed": "Dyskusja jest zamknięta",
@@ -224,6 +227,7 @@
   "email-not-set": "Niestety, adres e-mail dla bloga <b>{location}</b> nie został ustawiony, więc automatyczne resetowanie hasła jest niemożliwe. Skontaktuj się z dostawcą Moera lub właścicielem serwera, aby znaleźć alternatywne sposoby resetowania hasła.",
   "email-set": "Adres e-mail ustawiony",
   "emoji": "Emoji",
+  "enable-all": "Włącz wszystko",
   "enable-oppose-reactions": "Włącz reakcje \"Przeciwny\"",
   "enable-reactions": "Włącz reakcje",
   "enter-name": "Wpisz imię...",
@@ -401,6 +405,7 @@
   "load-newer-posts": "Wczytaj nowsze posty",
   "load-older-posts": "Wczytaj starsze posty",
   "login-incorrect": "Nazwa bloga lub hasło są nieprawidłowe",
+  "main": "Główny",
   "male": "Mężczyzna",
   "male-short": "m.",
   "many": "Wiele",
@@ -475,8 +480,6 @@
   "numbered-list": "Lista numerowana",
   "ok": "OK",
   "only-new": "Tylko nowe",
-  "only-selected-allowed": "Dozwolone tylko wybrane",
-  "only-selected-allowed-star-preferred": "Dozwolone tylko wybrane, oznaczone <0/> są preferowane",
   "open": "Otwórz",
   "open-link": "Otwórz link",
   "operation-at": "o",
@@ -667,9 +670,7 @@
   "secret-code": "Kod tajny",
   "secret-words": "Tajne słowa",
   "select": "Wybierz",
-  "select-all": "Zaznacz wszystko",
   "selected-automatically": "Wybrane automatycznie",
-  "selected-preferred": "Wybrane są preferowane",
   "send": "Wyślij",
   "send-request-delete-blog": "Wysłałeś prośbę o usunięcie swojego bloga ze wszystkimi danymi",
   "set-as-default": "Ustaw jako domyślne",
@@ -1021,7 +1022,6 @@
   "unknown-name": "Nieznana nazwa",
   "unpin": "Odepnij",
   "unquote": "Usuń cytat",
-  "unselect-all": "Odznacz wszystko",
   "unsigned": "Niepodpisany",
   "unsubscribe": "Anuluj subskrypcję",
   "update": "Aktualizuj",
